[package]
name = "rosu-noodlers"
version = "0.1.0"
edition = "2021"
authors = ["Osef0760 <osefcode@gmail.com>"]
description = "Noodle changer for osu!mania"
license = "MIT"
repository = "https://github.com/OsuChecker/rosu-noodlers"
documentation = "https://docs.rs/rosu-noodlers"
readme = "README.md"
keywords = ["osu", "gaming", "noodles", "rhythm-game"]
categories = ["games", "algorithms"]

[dependencies]
rosu-map = "0.2.0"
log = "0.4.26"